# gapless-lossy-codec

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
src/: audio.rs  codec.rs  flac.rs  lib.rs  main.rs  playback.rs  ui.rs
staging/: comprehensive_test.rs  export_test.rs  simple_test.rs  test_compression.rs  test_export.rs
tests/: codec_tests.rs  test_codec.rs  test_comprehensive.rs  test_compression_ratio.rs  test_export.rs  test_file_size.rs  test_flac.rs  test_flac_export.rs  test_micro_benchmark.rs  test_performance.rs  test_simple.rs  utils.rs
