[package]
name = "gapless-lossy-codec"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[lib]
name = "gapless_lossy_codec"
path = "src/lib.rs"

[dependencies]
eframe = "0.24"
egui = "0.24"
rfd = "0.12"
hound = "3.5"
claxon = "0.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rodio = "0.17"
rayon = "1.8"
crossbeam-channel = "0.5"
flac-bound = "0.5"

[[bin]]
name = "gapless-codec"
path = "src/main.rs"
