[package]
name = "gapless-lossy-codec"
version = "0.4.0"
edition = "2024"
build = "build.rs"

[lib]
name = "gapless_lossy_codec"
path = "src/lib.rs"

[dependencies]
eframe = { version = "0.24", optional = true }
egui = { version = "0.24", optional = true }
rfd = { version = "0.12", optional = true }
hound = "3.5"
claxon = "0.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rodio = { version = "0.17", optional = true }
rayon = "1.8"
crossbeam-channel = "0.5"
flac-bound = { version = "0.5", optional = true }

[features]
default = ["flac-export", "ui"]
flac-export = ["flac-bound"]
playback = ["rodio"]
ui = ["eframe", "egui", "rfd", "playback"]

[[bin]]
name = "glc"
path = "src/main.rs"
